frontend/src/modules/scaffold/less/textArea.less
.field-editor {
   .cke_replace {
    display: none;
   }

  .cke_chrome {
    border-color: #ccc;
    border-radius: 2px;
    overflow: hidden;
    box-shadow: none;
    width: 93%;
  }

  .cke_top {
    background: #eee;
    border-color: #ccc;
    box-shadow: none;
  }

  .cke_bottom {
    background: @white;
    border-color: #ccc;
  }

  .cke_toolgroup {
    background-image: none;
    background: @white;
    border-color: #ccc;
  }

  .ck.ck-editor {
    position: relative;
    width: 90%;
  }

  .ck-editor__editable_inline {
    min-height: 200px;
  }

  .ck-editor__editable {
    /* Set a fixed height for the editor container */
    height: 300px;
    /* Add scrollbars if the content exceeds the height */
    overflow-y: auto;
  }

  .ck.ck-sticky-panel .ck-sticky-panel__content_sticky {
      position: unset;
  }
}

